# visky

./: .gitignore  README.md  main.py  pyproject.toml
src/visky/: hadec_on_azel_grid.py
src/vispy/: __init__.py  hadec_on_azel_grid.py  location.py  utils.py
tests/: test_list_splitter.py
